--- a/gui/window.ui
+++ b/gui/window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>gui::window</class>
- <widget class="QWidget" name="gui::window">
+ <class>window</class>
+ <widget class="QMainWindow" name="window">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,116 +13,169 @@
   <property name="windowTitle">
    <string>OSCgard Editor</string>
   </property>
-  <layout class="QVBoxLayout" name="layout_2">
-   <item>
-    <widget class="QWidget" name="control_widget" native="true">
-     <layout class="QGridLayout" name="layout">
-      <property name="leftMargin">
-       <number>0</number>
+  <widget class="QWidget" name="widget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTableWidget" name="actions">
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
-      <property name="topMargin">
-       <number>0</number>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
-      <property name="rightMargin">
-       <number>0</number>
+      <property name="sortingEnabled">
+       <bool>true</bool>
       </property>
-      <item row="1" column="2">
-       <widget class="QPushButton" name="config_open">
-        <property name="text">
-         <string>&amp;Open...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="7">
-       <widget class="QPushButton" name="service_stop">
-        <property name="text">
-         <string>St&amp;op</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="5">
-       <widget class="QLabel" name="service_label">
-        <property name="text">
-         <string>Service</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="config_edit">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>1</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="6">
-       <widget class="QPushButton" name="service_start">
-        <property name="text">
-         <string>St&amp;art</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QPushButton" name="config_save">
-        <property name="text">
-         <string>&amp;Save</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="4">
-       <spacer name="spacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QTableWidget" name="actions_table">
-     <property name="alternatingRowColors">
-      <bool>true</bool>
-     </property>
-     <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Pattern</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Command</string>
-      </property>
-     </column>
-    </widget>
-   </item>
-  </layout>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Pattern</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Command</string>
+       </property>
+      </column>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menu">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="file">
+    <property name="title">
+     <string>&amp;File</string>
+    </property>
+    <addaction name="open"/>
+    <addaction name="save"/>
+    <addaction name="save_as"/>
+    <addaction name="separator"/>
+    <addaction name="exit"/>
+   </widget>
+   <widget class="QMenu" name="service">
+    <property name="title">
+     <string>&amp;Service</string>
+    </property>
+    <addaction name="restart"/>
+    <addaction name="start"/>
+    <addaction name="stop"/>
+    <addaction name="separator"/>
+    <addaction name="enable"/>
+    <addaction name="disable"/>
+   </widget>
+   <widget class="QMenu" name="help">
+    <property name="title">
+     <string>&amp;Help</string>
+    </property>
+    <addaction name="about"/>
+   </widget>
+   <addaction name="file"/>
+   <addaction name="service"/>
+   <addaction name="help"/>
+  </widget>
+  <action name="open">
+   <property name="icon">
+    <iconset theme="document-open">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Open...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="save">
+   <property name="icon">
+    <iconset theme="document-save">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="save_as">
+   <property name="icon">
+    <iconset theme="document-save-as">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Save &amp;As...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="exit">
+   <property name="icon">
+    <iconset theme="application-exit">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="start">
+   <property name="icon">
+    <iconset theme="media-playback-start">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>St&amp;art</string>
+   </property>
+  </action>
+  <action name="stop">
+   <property name="icon">
+    <iconset theme="media-playback-stop">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>St&amp;op</string>
+   </property>
+  </action>
+  <action name="about">
+   <property name="text">
+    <string>&amp;About...</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
+   </property>
+  </action>
+  <action name="restart">
+   <property name="text">
+    <string>R&amp;estart</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
+   </property>
+  </action>
+  <action name="enable">
+   <property name="text">
+    <string>&amp;Enable</string>
+   </property>
+  </action>
+  <action name="disable">
+   <property name="text">
+    <string>&amp;Disable</string>
+   </property>
+  </action>
  </widget>
- <tabstops>
-  <tabstop>config_edit</tabstop>
-  <tabstop>config_open</tabstop>
-  <tabstop>config_save</tabstop>
-  <tabstop>service_start</tabstop>
-  <tabstop>service_stop</tabstop>
-  <tabstop>actions_table</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
